# rust-CHC-verifier

./: Cargo.toml  Dockerfile  README.md  pretty-print-assertions.py  verify-all.py  verify.py
examples/: example0.rs  example0.smt2  example1-inc-max.rs  example1-inc-max.smt2  example1.rs  example1.smt2  example2-swap-references.rs  example2-swap-references.smt2  example2.rs  example2.smt2  example3-conditional-borrowing.rs  example3-conditional-borrowing.smt2  example3.rs  example3.smt2  example4.rs  example4.smt2  example5.smt2  test0-empty.smt2  test0.1-empty-main.smt2  test1.smt2  test10-assign-borrow.rs  test11-drop-after-last-use-before-overwrite.rs  test11-drop-after-last-use-before-overwrite.smt2  test11-if.smt2  test12-if.rs  test12-if.smt2  test13-if-with-drop.rs  test13-if-with-drop.smt2  test14-if-assert-cond.rs  test14-if-assert-cond.smt2  test2-comparisons.rs  test2-comparisons.smt2  test3-int-operations.rs  test3-int-operations.smt2  test4-logic-operations.rs  test4-logic-operations.smt2  test5-complex.rs  test5-complex.smt2  test6-declare-borrow.smt2  test7-assign-reference.smt2  (+4 more)
src/: ast_downcasters.rs  drop_elaboration.rs  main.rs  smtlib2.rs  syn_utils.rs  translate.rs
src/translate/: assert_translation.rs  borrow_utils.rs  expr_translations.rs  if_translation.rs  stmt_translations.rs  syn_expr_translation.rs  utils.rs  var_translations.rs
